5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1616_2941.log
== TEST (2019-04-01 14:18:12) 
-- CODE:
vi = 150
j = 15
n = 5
print("vi")
print("j")
print("n")
x = vi (( 1 + j ) * * n)
round(x,2)
-- ERROR:
File "XXXX", line 7
    x = vi (( 1 + j ) * * n)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:18:22) 
-- CODE:
vi = 150
j = 15
n = 5
print("vi")
print("j")
print("n")
x = (vi ( 1 + j ) * * n)
round(x,2)
-- ERROR:
File "XXXX", line 7
    x = (vi ( 1 + j ) * * n)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:18:26) 
-- CODE:
vi = 150
j = 15
n = 5
print("vi")
print("j")
print("n")
x = vi ( 1 + j ) * * n
round(x,2)
-- ERROR:
File "XXXX", line 7
    x = vi ( 1 + j ) * * n
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:19:11) 
-- CODE:
vi = 150
j = 15
n = 5
print("vi")
print("j")
print("n")
x = vi ( 1 + j )**n
round(x,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = vi ( 1 + j )**n
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:19:32) 
-- CODE:
vi = 150
j = 15
n = 5
print("vi")
print("j")
print("n")
x = int(input(vi ( 1 + j )**n))
round(x,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = int(input(vi ( 1 + j )**n))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:19:35) 
-- CODE:
vi = 150
j = 15
n = 5
print("vi")
print("j")
print("n")
x = int(input(vi ( 1 + j )**n))
round(x,2)
-- EXECUTION TIME:
0.177823
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2941/main.py", line 7, in <module>
    x = int(input(vi ( 1 + j )**n))
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:19:39) 
-- CODE:
vi = 150
j = 15
n = 5
print("vi")
print("j")
print("n")
x = int(input(vi ( 1 + j )**n)
round(x,2)
-- ERROR:
File "XXXX", line 8
    round(x,2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:20:07) 
-- CODE:
vi = 150
j = 15
n = 5
print("vi")
print("j")
print("n")
x = int(input(vi ( 1 + j )**n))
round(x,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = int(input(vi ( 1 + j )**n))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:20:33) 
-- CODE:
vi = 150
j = 15
n = 5
print("vi:")
print("j:")
print("n:")
x = int(input(vi ( 1 + j )**n))
round(x,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = int(input(vi ( 1 + j )**n))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:20:39) 
-- CODE:
vi = 150
j = 15
n = 5
print("vi:")
print("j:")
print("n:")
x = int(input(vi ( 1 + j )**n))
round(x,2)
-- EXECUTION TIME:
0.120789
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2941/main.py", line 7, in <module>
    x = int(input(vi ( 1 + j )**n))
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:20:42) 
-- CODE:
vi = 150
j = 15
n = 5
print("vi:")
print("j:")
print("n:")
x = input(vi ( 1 + j )**n)
round(x,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = input(vi ( 1 + j )**n)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:20:48) 
-- CODE:
vi = 150
j = 15
n = 5
print("vi:")
print("j:")
print("n:")
x = input (vi ( 1 + j )**n)
round(x,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = input (vi ( 1 + j )**n)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:20:49) 
-- CODE:
vi = 150
j = 15
n = 5
print("vi:")
print("j:")
print("n:")
x = input (vi ( 1 + j )**n)
round(x,2)
-- EXECUTION TIME:
0.124069
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2941/main.py", line 7, in <module>
    x = input (vi ( 1 + j )**n)
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:21:10) 
-- CODE:
print("vi:")
print("j:")
print("n:")
x = input (vi( 1 + j )**n)
round(x,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = input (vi( 1 + j )**n)
NameError: name 'vi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:21:21) 
-- CODE:
print("vi:")
print("j:")
print("n:")
x = input(vi(1+j)**n)
round(x,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = input(vi(1+j)**n)
NameError: name 'vi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:21:23) 
-- CODE:
print("vi:")
print("j:")
print("n:")
x = input(vi(1+j)**n)
round(x,2)
-- EXECUTION TIME:
0.176369
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2941/main.py", line 4, in <module>
    x = input(vi(1+j)**n)
NameError: name 'vi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:21:39) 
-- CODE:
print("vi:")
print("j:")
print("n:")
vf = input(vi(1+j)**n)
round(x,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vf = input(vi(1+j)**n)
NameError: name 'vi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:21:47) 
-- CODE:
print("vi:")
print("j:")
print("n:")
vf = input(vi(1+j)**n)
round(x,2)
-- EXECUTION TIME:
0.149795
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2941/main.py", line 4, in <module>
    vf = input(vi(1+j)**n)
NameError: name 'vi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:22:04) 
-- CODE:
print("vi: 150")
print("j:")
print("n:")
vf = input(vi(1+j)**n)
round(x,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vf = input(vi(1+j)**n)
NameError: name 'vi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:23:08) 
-- CODE:
vi = print("valor inicial investido:")
j = print("juros:")
n = print("meses:")
vf = input(vi(1+j)**n)
round(x,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vf = input(vi(1+j)**n)
TypeError: unsupported operand type(s) for +: 'int' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:23:20) 
-- CODE:
vi = print("valor inicial investido:")
j = print("juros:")
n = print("meses:")
vf = (vi(1+j)**n)
round(vf,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vf = (vi(1+j)**n)
TypeError: unsupported operand type(s) for +: 'int' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:23:25) 
-- CODE:
vi = print("valor inicial investido:")
j = print("juros:")
n = print("meses:")
vf = (vi(1+j)**n)
round(vf,2)
-- EXECUTION TIME:
0.129266
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2941/main.py", line 4, in <module>
    vf = (vi(1+j)**n)
TypeError: unsupported operand type(s) for +: 'int' and 'NoneType'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:23:26) 
-- CODE:
vi = print("valor inicial investido:")
j = print("juros:")
n = print("meses:")
vf = (vi(1+j)**n)
round(vf,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vf = (vi(1+j)**n)
TypeError: unsupported operand type(s) for +: 'int' and 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:25:49) 
-- CODE:
vi = int("valor inicial investido:")
j = print("juros:")
n = print("meses:")
vf = (vi(1+j)**n)
round(vf,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vi = int("valor inicial investido:")
ValueError: invalid literal for int() with base 10: 'valor inicial investido:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:25:50) 
-- CODE:
vi = int("valor inicial investido:")
j = print("juros:")
n = print("meses:")
vf = (vi(1+j)**n)
round(vf,2)
-- EXECUTION TIME:
0.14296
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2941/main.py", line 1, in <module>
    vi = int("valor inicial investido:")
ValueError: invalid literal for int() with base 10: 'valor inicial investido:'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:25:51) 
-- CODE:
vi = int("valor inicial investido:")
j = print("juros:")
n = print("meses:")
vf = (vi(1+j)**n)
round(vf,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vi = int("valor inicial investido:")
ValueError: invalid literal for int() with base 10: 'valor inicial investido:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:26:23) 
-- CODE:
vi = print(int("valor inicial investido:"))
j = print(int("juros:"))
n = print(int("meses:"))
vf = (vi(1+j)**n)
round(vf,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vi = print(int("valor inicial investido:"))
ValueError: invalid literal for int() with base 10: 'valor inicial investido:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:26:29) 
-- CODE:
vi = print(int("valor inicial investido:"))
j = print(int("juros:"))
n = print(int("meses:"))
vf = (vi(1+j)**n)
round(vf,2)
-- EXECUTION TIME:
0.179852
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2941/main.py", line 1, in <module>
    vi = print(int("valor inicial investido:"))
ValueError: invalid literal for int() with base 10: 'valor inicial investido:'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:26:30) 
-- CODE:
vi = print(int("valor inicial investido:"))
j = print(int("juros:"))
n = print(int("meses:"))
vf = (vi(1+j)**n)
round(vf,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vi = print(int("valor inicial investido:"))
ValueError: invalid literal for int() with base 10: 'valor inicial investido:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:27:22) 
-- CODE:
vi = 10000
j = 0.01
n = 12
vf = print(vi(1+j)**n)
round(vf,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vf = print(vi(1+j)**n)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:27:24) 
-- CODE:
vi = 10000
j = 0.01
n = 12
vf = print(vi(1+j)**n)
round(vf,2)
-- EXECUTION TIME:
0.171004
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2941/main.py", line 4, in <module>
    vf = print(vi(1+j)**n)
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:30:10) 
-- CODE:
vi = 10000
j = 0.01
n = 12
vf = round(vi(1+j)**n)
print(vf,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vf = round(vi(1+j)**n)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:32:03) 
-- CODE:
vi = int(input("valor incial:"))
j = int(input("juros:"))
n = int(input("meses:"))
vf = int(vi(1+j)**n)
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    j = int(input())
ValueError: invalid literal for int() with base 10: '0.009'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:32:27) 
-- CODE:
vi = int(input("valor incial:"))
j = int(input("juros:"))
n = int(input("meses:"))
vf = int(vi(1+j)**n)
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    j = int(input())
ValueError: invalid literal for int() with base 10: '0.009'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:33:01) 
-- CODE:
vi = int(input("valor incial:"))
j = int(input("juros:"))
n = int(input("meses:"))
vf = int(input(vi(1+j)**n))
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    j = int(input())
ValueError: invalid literal for int() with base 10: '0.009'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:33:48) 
-- CODE:
vi = int(input("valor incial:"))
j = int(input("juros:"))
n = int(input("meses:"))
vf = int(input(round(vi(1+j)**n),2))
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    j = int(input())
ValueError: invalid literal for int() with base 10: '0.009'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:44:31) 
-- CODE:
vi = int(input("valor incial:"))
j = int(input("juros:"))
n = int(input("meses:"))
vf = int(input(round(vi*(1+j)**n),2))
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    j = int(input())
ValueError: invalid literal for int() with base 10: '0.009'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:45:03) 
-- CODE:
vi = int(input("valor incial:"))
j = int(input("juros:"))
n = int(input("meses:"))
vf = vi * (1+j) ** n
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    j = int(input())
ValueError: invalid literal for int() with base 10: '0.009'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:45:18) 
-- CODE:
vi = int(input("valor incial:"))
j = int(input("juros:"))
n = int(input("meses:"))
vf = vi * (1+j) ** n
print(round(vf,2))
-- EXECUTION TIME:
0.17651
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2941/main.py", line 2, in <module>
    j = int(input())
ValueError: invalid literal for int() with base 10: '0.009'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:45:23) 
-- CODE:
vi = int(input("valor incial:"))
j = int(input("juros:"))
n = int(input("meses:"))
vf = vi * (1+j) ** n
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    j = int(input())
ValueError: invalid literal for int() with base 10: '0.009'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:45:51) 
-- CODE:
vi = float(input("valor incial:"))
j = float(input("juros:"))
n = float(input("meses:"))
vf = vi * (1+j) ** n
print(round(vf,2))
-- OUTPUT:
24798.08
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:46:04) 
-- CODE:
vi = float(input("valor incial:"))
j = float(input("juros:"))
n = float(input("meses:"))
vf = vi * (1+j) ** n
print(round(vf,2))
-- EXECUTION TIME:
0.134793
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
24798.08
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
13322.3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
